--- a/src/components/StackLayout/stacklayout.scss
+++ b/src/components/StackLayout/stacklayout.scss
@@ -7,6 +7,7 @@
   gap: 2rem;
   padding: 0 0.75rem;
   min-width: 30rem;
+  height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-color: $primaryBgAccent;
